[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/ui/background/bg.png" type="Texture" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://asset/ui/icons/close.png" type="Texture" id=3]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://asset/menu/about/about.gd" type="Script" id=5]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=6]
[ext_resource path="res://asset/ui/icons/git.png" type="Texture" id=7]
[ext_resource path="res://asset/ui/icons/fb.png" type="Texture" id=8]
[ext_resource path="res://asset/ui/icons/icon.png" type="Texture" id=9]

[node name="about" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -441.0
margin_right = 280.0
margin_bottom = 441.0
grow_vertical = 2
rect_min_size = Vector2( 540, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 553.0
margin_bottom = 875.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 546.0
margin_bottom = 80.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_top = 10.0
margin_right = 462.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "About"
align = 1
valign = 1

[node name="button_close" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 466.0
margin_right = 546.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_top = 84.0
margin_right = 546.0
margin_bottom = 784.0
rect_min_size = Vector2( 0, 700 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
margin_right = 546.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 546.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 546.0
margin_bottom = 124.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="Label2" type="Label" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 492.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Colony - conquest"
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 496.0
margin_right = 546.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 546.0
margin_bottom = 311.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 183.0
rect_min_size = Vector2( 50, 0 )

[node name="Label2" type="Label" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 492.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "
is a fast pace strategy like mushroom wars for mobile. made using godot game engine.

made by Renosyah"
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 496.0
margin_right = 546.0
margin_bottom = 183.0
rect_min_size = Vector2( 50, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 546.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 359.0
margin_right = 546.0
margin_bottom = 459.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="gd" type="TextureButton" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 54.0
margin_right = 154.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 9 )
expand = true

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 158.0
margin_right = 208.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="fb" type="TextureButton" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 212.0
margin_right = 312.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 8 )
expand = true

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 316.0
margin_right = 366.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="git" type="TextureButton" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 370.0
margin_right = 470.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 7 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 474.0
margin_right = 524.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 0 )

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 463.0
margin_right = 546.0
margin_bottom = 583.0
rect_min_size = Vector2( 0, 120 )

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 788.0
margin_right = 546.0
margin_bottom = 868.0
rect_min_size = Vector2( 0, 80 )
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/button_close" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/gd" to="." method="_on_gd_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/fb" to="." method="_on_fb_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/git" to="." method="_on_git_pressed"]
